題目二/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asiayo-app-service
  namespace: asiayo
spec:
  type: ClusterIP
  selector:
    app: asiayo
  ports:
  - name: http
    port: 80
    targetPort: 80
