題目二/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asiayo-ingress
  namespace: asiayo
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: asiayo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: asiayo-app-service
            port:
              number: 80
